<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/menu_home" />

    </group>

    <item android:title="NETWORK">
        <menu>

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_thumb_up"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

    <item android:title="OTHER">
        <menu>

            <item
                android:id="@+id/nav_Help"
                android:icon="@drawable/ic_help_outline"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
